# InputSync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  inputsync.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: crypto.rs  protocol.rs  session.rs
src-tauri/src/input/: capture.rs  mod.rs  simulation.rs
src-tauri/src/network/: client.rs  server.rs  tls.rs
src-tauri/src/ui/: logs_panel.rs  main_panel.rs  mod.rs  screen_map.rs  settings_panel.rs
src/components/: ClientPanel.tsx  Panel.css  PixelLogo.tsx  ServerPanel.tsx  StatusBar.css  StatusBar.tsx
