[package]
name = "inputsync"
version = "1.1.0"
description = "InputSync - Software KVM Switch"
authors = ["KaiCreates"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "inputsync"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", features = ["glow"] }
egui = "0.31"
egui_extras = "0.31"

# System tray
tray-icon = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui_logger = "0.6"

# TLS (optional SSL feature)
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Input simulation
enigo = "0.2"

# Input capture
rdev = "0.5"

# Utilities
anyhow = "1"
thiserror = "1"
once_cell = "1"
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
